// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Topic Page A11y I can see the skip to content link 1`] = `"Waka go wetin de inside"`;

exports[`Canonical Topic Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Topic Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Topic Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "70",
  },
  {
    "p": "pidgin.topics.c95y35941vrt.page",
  },
  {
    "x1": "[urn:bbc:tipo:topic:c95y35941vrt]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-pidgin]",
  },
  {
    "x4": "[pcm]",
  },
  {
    "x7": "[index-category]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Donald%20Trump]",
  },
]
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Pidgin",
  "url": "/pidgin",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 2`] = `
{
  "text": "Why you fit trust BBC News",
  "url": "https://www.bbc.com/pidgin/institutional-48528766",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 3`] = `
{
  "text": "How dem dey take use am",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 4`] = `
{
  "text": "As e concern BBC",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 5`] = `
{
  "text": "Privacy Policy",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 7`] = `
{
  "text": "Call BBC",
  "url": "https://www.bbc.co.uk/pidgin/send/u50853577",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News for oda languages",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 9`] = `
{
  "text": "De way wey we de take go external link.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Topic Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pidgin"`;

exports[`Canonical Topic Page Footer Paragraphs should match text 1`] = `"© 2026 BBC. De external site no concern BBC. De way wey we de take go external link."`;

exports[`Canonical Topic Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Pidgin",
  "svg": "http://localhost:7081//pidgin/images/brandLogo.svg",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 1`] = `
{
  "text": "Home",
  "url": "/pidgin",
}
`;

exports[`Canonical Topic Page Main heading should match text 1`] = `"Donald Trump"`;

exports[`Canonical Topic Page Page content First item in the first curation is the correct headline 1`] = `"Di 34 criminal charges against former US President Donald Trump and di likely punishment"`;

exports[`Canonical Topic Page Page content First item in the first curation is the correct image 1`] = `
<img
  alt="Donald Trump in court wit im lawyers, including Todd Blanche (far left) and Susan Necheles (second from left)"
  class="css-1seqhu9"
  loading="eager"
  sizes="(min-width: 63rem) 232px, (min-width: 37.5rem) 50vw, 33vw"
  src="https://ichef.bbci.co.uk/ace/standard/240/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg"
  srcset="https://ichef.bbci.co.uk/ace/standard/85/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 85w, https://ichef.bbci.co.uk/ace/standard/120/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 120w, https://ichef.bbci.co.uk/ace/standard/170/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 170w, https://ichef.bbci.co.uk/ace/standard/232/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 232w, https://ichef.bbci.co.uk/ace/standard/325/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 325w, https://ichef.bbci.co.uk/ace/standard/450/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 450w, https://ichef.bbci.co.uk/ace/standard/660/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 660w, https://ichef.bbci.co.uk/ace/standard/800/cpsprodpb/ab73/live/2ca22200-d379-11ed-ae6f-bf4b4aaa99a6.jpg.webp 800w"
  style="aspect-ratio:16 / 9"
/>
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Topic Page SEO Canonical link 1`] = `"http://localhost:7081/pidgin/topics/c95y35941vrt"`;

exports[`Canonical Topic Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Topic Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Topic Page SEO Heading level 1 1`] = `"Donald Trump"`;

exports[`Canonical Topic Page SEO Lang attribute 1`] = `"pcm"`;

exports[`Canonical Topic Page SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "Donald Trump",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "pcm",
        "name": "Nigerian Pidgin",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/pidgin/topics/c95y35941vrt",
        "@type": "WebPage",
        "name": "Donald Trump",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "publishingPrinciples": "https://www.bbc.com/pidgin/institutional-48528766",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/metadata/poster-1024x576.png",
      "url": "http://localhost:7081/pidgin/topics/c95y35941vrt",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/pidgin/articles/c97dqy49r6mo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/pidgin/articles/cgr1873031po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/pidgin/articles/cl70nnzwygno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/pidgin/articles/c108qmg34lno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/pidgin/articles/c3grn1vp22no",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/pidgin/articles/ce42l3rxzz5o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/pidgin/articles/c84ejj0v3lwo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/pidgin/articles/c991v2gxx7lo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/pidgin/articles/c6p9rxv3wedo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/pidgin/articles/c84pdy202y0o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/pidgin/articles/cz9y7g91kg9o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.bbc.com/pidgin/articles/cg6vzwlz0wlo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.bbc.com/pidgin/articles/cd15jkr6pzzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://www.bbc.com/pidgin/articles/cd1lk2nmpxro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://www.bbc.com/pidgin/articles/cz91pzy45qqo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.bbc.com/pidgin/articles/c72qkxlzq1vo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://www.bbc.com/pidgin/articles/cqvgq9wq991o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 18,
          "url": "https://www.bbc.com/pidgin/world-62174669",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 19,
          "url": "https://www.bbc.com/pidgin/world-62174668",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 20,
          "url": "https://www.bbc.com/pidgin/articles/cj5r8vvzpljo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 21,
          "url": "https://www.bbc.com/pidgin/world-60465144",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 22,
          "url": "https://www.bbc.com/pidgin/tori-59901959",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 23,
          "url": "https://www.bbc.com/pidgin/tori-57396574",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 24,
          "url": "https://www.bbc.com/pidgin/tori-56991816",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 25,
          "url": "https://www.bbc.com/pidgin/articles/ce3zyp0z93do",
        },
      ],
      "name": "BBC News Pidgin",
      "numberOfItems": 25,
    },
  ],
}
`;

exports[`Canonical Topic Page SEO OG description 1`] = `"Description of Donald Trump topic page"`;

exports[`Canonical Topic Page SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/metadata/poster-1024x576.png"`;

exports[`Canonical Topic Page SEO OG image alt 1`] = `"BBC News Pidgin"`;

exports[`Canonical Topic Page SEO OG locale 1`] = `"pcm"`;

exports[`Canonical Topic Page SEO OG site name 1`] = `"BBC News Pidgin"`;

exports[`Canonical Topic Page SEO OG title 1`] = `"Donald Trump - BBC News Pidgin"`;

exports[`Canonical Topic Page SEO OG type 1`] = `"website"`;

exports[`Canonical Topic Page SEO OG url 1`] = `"http://localhost:7081/pidgin/topics/c95y35941vrt"`;

exports[`Canonical Topic Page SEO Page title 1`] = `"Donald Trump - BBC News Pidgin"`;

exports[`Canonical Topic Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Topic Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Topic Page SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`Canonical Topic Page SEO Twitter description 1`] = `"Description of Donald Trump topic page"`;

exports[`Canonical Topic Page SEO Twitter image alt 1`] = `"BBC News Pidgin"`;

exports[`Canonical Topic Page SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/metadata/poster-1024x576.png"`;

exports[`Canonical Topic Page SEO Twitter site 1`] = `"@BBCNews"`;

exports[`Canonical Topic Page SEO Twitter title 1`] = `"Donald Trump - BBC News Pidgin"`;
